<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="#A9A9A9"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">
            <ImageView
                android:id="@+id/phone"
                android:src="@drawable/phone"
                style="@style/relativeImages"
                android:contentDescription="@string/phone_icon"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>
            <ImageView
                android:id="@+id/exercises"
                android:src="@drawable/exercise"
                style="@style/relativeImages"
                android:contentDescription="@string/exercise_icon"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>
            <ImageView
                android:id="@+id/food"
                android:src="@drawable/food"
                android:contentDescription="@string/food_icon"
                style="@style/relativeImages"
                android:layout_below="@id/phone"
                android:layout_alignParentLeft="true"/>
            <ImageView
                android:id="@+id/music"
                android:src="@drawable/music"
                android:contentDescription="@string/music_icon"
                style="@style/relativeImages"
                android:layout_below="@id/exercises"
                android:layout_alignParentRight="true"/>
            <ImageView
                android:id="@+id/settings"
                android:src="@drawable/settings"
                android:contentDescription="@string/settings_icon"
                style="@style/relativeImages"
                android:layout_below="@id/food"
                android:layout_alignParentLeft="true"/>
            <ImageView
                android:id="@+id/weather"
                android:src="@drawable/weather"
                android:contentDescription="@string/weather_icon"
                style="@style/relativeImages"
                android:layout_below="@id/music"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>